# back

./: .env.example  .gitignore  Cargo.toml  Dockerfile  RAPPORT.md  README.md  compose.prod.yaml  compose.yaml  docker-compose.yml  newpatch.rs  patch.pl
.github/workflows/: ci-cd.yml  neon.yml
.sqlx/: query-0690d2d64a155b33fc5e263c9f2d2c32299498f035f29359356b362c665f3ece.json  query-07c605e0e9c27833d8770a6e7db5d70d36d68fe4c96a234c6425484f82f32f3a.json  query-10b682d385534a34ebf4c5f0039b6bd4f14b6c3a399819d46446656222f96744.json  query-13798eb097885a3c4a680bb9a78b688f9287ba33b5b0021d06c332ed20a7c1e3.json  query-18af5d8ef61cd3ab6da7211b80bda9619a099b50c10fcce1a1969e017db7fe42.json  query-270eedf008b0e910f6826d7f4db3e08e9d2fd0484657b292e0af4ca32490b245.json  query-497c64424ad3b231bbccf9dfc82e69a7eb93b1daf8f7ba1e2a6c84f97078abb2.json  query-6147dbf9ebc8c0810470c4ed370d7da24a04d7015ee49e72ac89928ed98f3450.json  query-71ca46c0539aaa314aa5f7b7597621c89725362af7ce4fb6d8633abf2c6e60fd.json  query-8a1eda7b7304f2316ae88441b62d4141ecfff8c0ed58eaede77eb410381943a9.json  query-9ddbccf845051bc97920ffbc62ed449f7018d395160c3a8ef9ba571c1c41f22b.json  query-bf6b4038dc429b1a97667d5c16c673186b4c0ef5c2a6e9df98881599b23f5e28.json  query-e13c86f620e92238da76958da801ca13c59f1998230acd2f72d8b3e2b218d90c.json  query-f6d141a99496c9ff3df6bfcfa3a9843621beea3e9d6341b8fd204d711048c9a3.json  query-fecbca35f61b55e8936480dfe56e52d844823d5ad0f1cfc9c018e49e06cecfa5.json
keycloak/import/: truegather-realm.json
keycloak/themes/truegather/login/: info.ftl  login-reset-password.ftl  login-update-password.ftl  login.ftl  register.ftl  theme.properties
keycloak/themes/truegather/login/messages/: messages_fr.properties
keycloak/themes/truegather/login/resources/css/: truegather.css
migrations/: 0001_initial_schema.sql  0002_email_verification.sql  0002_groups_v1_permissions.sql  0003_group_invitations_and_notifications.sql  0003_sessions_and_user_uuid.sql
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/auth/: dto.rs  email_verification.rs  handlers.rs  middleware.rs  mod.rs  oidc.rs  routes.rs  session.rs  sync.rs
src/mail/: mod.rs  service.rs  templates.rs
src/media/: mod.rs
src/meetings/: dto.rs  handlers.rs  routes.rs
src/models/: dashboard.rs  group.rs  group_invitation.rs  meeting.rs  mod.rs  planning.rs  user.rs  user_search.rs
src/redis/: mod.rs
src/webrtc_engine/: mod.rs  sfu.rs
src/ws/: mod.rs
tests/: signaling.rs
